--- a/backend/package.json
+++ b/backend/package.json
@@ -28,7 +28,9 @@
     "morgan": "^1.10.0",
     "openai": "^4.20.1",
     "rss-parser": "^3.13.0",
-    "twitter-api-v2": "^1.15.2"
+    "twitter-api-v2": "^1.15.2",
+    "typescript": "^5.3.3",
+    "@types/node": "^20.10.6"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -36,12 +38,10 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
-    "@types/node": "^20.10.6",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
     "prisma": "^5.7.1",
-    "tsx": "^4.6.2",
-    "typescript": "^5.3.3"
+    "tsx": "^4.6.2"
   }
 }
