Update build script to include backend installation step in package.json

--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
     "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "dev:backend": "cd backend && npm run dev",
     "dev:frontend": "cd frontend && npm run dev",
-    "build": "npm run build:backend && npm run build:frontend",
+    "build": "npm run install:backend && npm run build:backend && npm run build:frontend",
     "build:backend": "cd backend && npm run build",
     "build:frontend": "cd frontend && npm run build",
     "start": "cd backend && npm start",
-    "install:all": "npm install && cd backend && npm install && cd ../frontend && npm install"
+    "install:all": "npm install && cd backend && npm install && cd ../frontend && npm install",
+    "install:backend": "cd backend && npm install"
   },
   "keywords": ["social-media", "automation", "rss", "ai", "twitter"],
   "author": "",
   "license": "MIT",
+  "dependencies": {
+    "typescript": "^5.3.3"
+  },
   "devDependencies": {
     "concurrently": "^8.2.2"
   }
