--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "dev:backend": "cd backend && npm run dev",
     "dev:frontend": "cd frontend && npm run dev",
-    "build": "cd backend && npm install && npm run build:backend",
+    "build": "cd backend && npm install && npm run build",
     "build:backend": "cd backend && npm run build",
     "build:frontend": "cd frontend && npm run build",
     "build:full": "cd backend && npm install && cd ../frontend && rm -rf node_modules package-lock.json && npm install --legacy-peer-deps && cd .. && npm run build:backend && npm run build:frontend",
